[package]
name = "resonance-bhop"
version = "1.0.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow"] }
hidapi = { version = "2.6.5", default-features = false, features = ["windows-native"] }
hidparser = "1.0.3"
parking_lot = "0.12.5"
vigem-rust = "0.1.1"

[build-dependencies]
winresource = "0.1.31"
