[package]
name = "resonance-bhop"
version = "1.0.2"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow"] }
hidapi = { version = "2.6.5", default-features = false, features = ["windows-native"] }
hidparser = "1.0.3"
image = { version = "0.25.10", default-features = false, features = ["png"] }
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.23"
vigem-rust = "0.1.1"
windows = { version = "0.62.2", features = ["Win32_UI_Input_XboxController"] }

[build-dependencies]
winresource = "0.1.31"
